--- a/src/templates/4_UZ_ChildDI_Material_Resources_en.html
+++ b/src/templates/4_UZ_ChildDI_Material_Resources_en.html
@@ -15,91 +15,91 @@
         <div class="grid grid-cols-12 border">
             <div class="col-span-1 bg-stone-200 p-2"></div>
             <div class="col-span-11 p-2">
-                <h1 class="text-4xl text-gray-700 pl-4 tracking-wide mb-4"><%= it.t1 %></h1>
-                <p class="pl-4 text-red-800 text-sm font-medium"><%= it.t2 %></p>
+                <h1 class="text-4xl text-gray-700 pl-4 tracking-wide mb-4">Material resources of the institution and the living conditions of the residing children</h1>
+                <p class="pl-4 text-red-800 text-sm font-medium">Questionnaire for childcare institutions and specialized boarding-schools</p>
             </div>
         </div>
 
-        <p class="mt-4 mb-2 text-xl"><%= it.t3 %></p>
-        <p class="mb-2"><%= it.t4 %></p>
-        <p class="mb-2"><%= it.t5 %></p>
-        <p class="mb-2"><%= it.t6 %></p>
-        <p class="mb-2"><%= it.t7 %></p>
-        <p class="mb-2"><%= it.t8 %></p>
-        <p class="mb-2"><%= it.t9 %></p>
-        <p class="mb-2"><%= it.t10 %></p>
-        <p class="mb-2"><%= it.t11 %></p>
+        <p class="mt-4 mb-2 text-xl">INTRODUCTION </p>
+        <p class="mb-2">The primary goal of this data collection is to support the Government of Uzbekistan in transitioning from institutional care to family-type care for children deprived of parental care. To achieve this, we aim to build a robust monitoring mechanism at the national level. By collecting detailed data, we can inform evidence-based decisions and policies that promote family-based alternatives. </p>
+        <p class="mb-2">Another critical objective is to enhance the quality of services provided to children with disabilities in institutional care. By understanding their unique needs and experiences, we can develop targeted interventions and improve their overall well-being. Additionally, we seek to explore and promote adequate family-type alternatives for these children.</p>
+        <p class="mb-2">The data collection on material and financial resources aims to assess the facilities, resources, and financial aspects of the child care institutions and boarding schools, in order to enhance the overall quality of child care services. The ultimate goal is to create safe, nurturing environments that promote the well-being and development of every child placed into care, guided by evidence.</p>
+        <p class="mb-2">PURPOSE: The data collected through this instrument contributes to the assessment of childcare institutions and specialized boarding schools in terms of the material resources available to them and the living conditions they provide to those living in these institutions.</p>
+        <p class="mb-2">How to complete: This questionnaire is to be completed individually for each institution operating at the time of the research (1 January 2024).</p>
+        <p class="mb-2">Source of information: institution&#39;s documents</p>
+        <p class="mb-2">Responsible for completion: the head of the institutions, coordinator or a person authorized by them</p>
+        <p class="mb-2">Approximate average completion time: 90 minutes</p>
 
         <div class="grid grid-cols-2 gap-4 items-center mt-12">
-            <div><%= it.t12 %>. <%= it.t13 %></div>
+            <div>Q1. Completion date of questionnaire</div>
             <div>
                 <input type="text" id="q1" name="q1" class="bg-white border border-gray-400 text-gray-900 text-sm rounded focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 disabled:bg-gray-100" />
             </div>
         </div>
         <div class="grid grid-cols-2 gap-4 items-center mt-6">
-            <div><%= it.t14 %>. <%= it.t15 %></div>
+            <div>Q2. Name, patronymics, and surname of the person who filled in the questionnaire</div>
             <div>
                 <input type="text" id="q2" name="q2" class="bg-white border border-gray-400 text-gray-900 text-sm rounded focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 disabled:bg-gray-100" />
             </div>
         </div>
         <div class="grid grid-cols-2 gap-4 items-center mt-6">
-            <div><%= it.t16 %>. <%= it.t17 %></div>
+            <div>Q3. Job title</div>
             <div>
                 <input type="text" id="q3" name="q3" class="bg-white border border-gray-400 text-gray-900 text-sm rounded focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 disabled:bg-gray-100" />
             </div>
         </div>
         <div class="grid grid-cols-2 gap-4 items-center mt-6">
-            <div><%= it.t18 %>. <%= it.t19 %></div>
+            <div>Q4. Profession</div>
             <div>
                 <input type="text" id="q4" name="q4" class="bg-white border border-gray-400 text-gray-900 text-sm rounded focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 disabled:bg-gray-100" />
             </div>
         </div>
         <div class="grid grid-cols-2 gap-4 items-center mt-6">
-            <div><%= it.t20 %>. <%= it.t21 %></div>
+            <div>Q5. Phone</div>
             <div>
                 <input type="text" id="q5" name="q5" class="bg-white border border-gray-400 text-gray-900 text-sm rounded focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 disabled:bg-gray-100" />
             </div>
         </div>
         <div class="grid grid-cols-2 gap-4 items-center mt-6">
-            <div><%= it.t22 %>. <%= it.t23 %></div>
+            <div>Q6. E-mail</div>
             <div>
                 <input type="text" id="q6" name="q6" class="bg-white border border-gray-400 text-gray-900 text-sm rounded focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 disabled:bg-gray-100" />
             </div>
         </div>
 
-        <h2 class="mt-10 mb-4 text-2xl font-bold text-gray-700"><%= it.t24 %></h2>
+        <h2 class="mt-10 mb-4 text-2xl font-bold text-gray-700">1. GENERAL INFORMATION ABOUT THE INSTITUTION</h2>
         <div class="grid grid-cols-2 gap-4 items-center mt-6">
-            <div><%= it.t25 %>. <%= it.t26 %></div>
+            <div>I1. Name of the specialized educational institution</div>
             <div>
                 <input type="text" id="i1" name="i1" class="bg-white border border-gray-400 text-gray-900 text-sm rounded focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 disabled:bg-gray-100" />
             </div>
         </div>
         <div class="grid grid-cols-2 gap-4 items-center mt-6">
-            <div><%= it.t27 %>. <%= it.t28 %></div>
+            <div>I2. Institution code from the registry</div>
             <div>
                 <input type="text" id="i2" name="i2" class="bg-white border border-gray-400 text-gray-900 text-sm rounded focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 disabled:bg-gray-100" />
             </div>
         </div>
         <div class="grid grid-cols-2 gap-4 items-center mt-6">
-            <div><%= it.t29 %>. <%= it.t30 %></div>
+            <div>I3. Address of the institution</div>
             <div>
                 <input type="text" id="i3" name="i3" class="bg-white border border-gray-400 text-gray-900 text-sm rounded focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 disabled:bg-gray-100" />
             </div>
         </div>
         <div class="grid grid-cols-2 gap-4 items-center mt-6">
-            <div><%= it.t31 %>. <%= it.t32 %></div>
+            <div>I4. The code of the administrative-territorial unit (МҲОБТ)</div>
             <div>
                 <input type="text" id="i4" name="i4" class="bg-white border border-gray-400 text-gray-900 text-sm rounded focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 disabled:bg-gray-100" />
             </div>
         </div>
         <div class="grid grid-cols-2 gap-4 items-center mt-6">
-            <div><%= it.t33 %>. <%= it.t34 %></div>
+            <div>I4a. Region</div>
             <div>
                 <input type="text" id="i4a" name="i4a" class="bg-white border border-gray-400 text-gray-900 text-sm rounded focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 disabled:bg-gray-100" />
             </div>
         </div>
         <div class="grid grid-cols-2 gap-4 items-center mt-6">
-            <div><%= it.t36 %>. <%= it.t37 %></div>
+            <div>I4b. District</div>
             <div>
                 <input type="text" id="i4b" name="i4b" class="bg-white border border-gray-400 text-gray-900 text-sm rounded focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 disabled:bg-gray-100" />
             </div>
@@ -117,75 +117,75 @@
             </div>
         </div>
         <div class="grid grid-cols-2 gap-4 items-center mt-6">
-            <div><%= it.t39 %>. <%= it.t40 %></div>
+            <div>I9. Type of institution</div>
             <div>
                 <input type="text" id="i9" name="i9" class="bg-white border border-gray-400 text-gray-900 text-sm rounded focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 disabled:bg-gray-100" />
             </div>
         </div>
         <div class="grid grid-cols-2 gap-4 items-center mt-6">
-            <div><%= it.t53 %>. <%= it.t54 %></div>
+            <div>I10. When did the institution start operating? Please provide the year of its inception, regardless of any changes in its name or type.</div>
             <div>
                 <input type="text" id="i10" name="i10" class="bg-white border border-gray-400 text-gray-900 text-sm rounded focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 disabled:bg-gray-100" />
             </div>
         </div>
-        <p class="italic uppercase mt-6 text-sm mb-2"><%= it.t55 %></p>
+        <p class="italic uppercase mt-6 text-sm mb-2">ONLY FOR CHILDCARE INSTITUTION</p>
         <div class="grid grid-cols-2 gap-4 items-center">
-            <div><%= it.t56 %>. <%= it.t57 %></div>
+            <div>I12a. How many children were residing in the institution as of December 31, the reporting year?</div>
             <div class="flex items-center gap-4">
                 <input type="text" id="i12a" name="i12a" class="bg-white border border-gray-400 text-gray-900 text-sm rounded focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 disabled:bg-gray-100" />
-                <span><%= it.t58 %></span>
+                <span>children</span>
             </div>
         </div>
-        <p class="italic uppercase mt-6 text-sm mb-2"><%= it.t59 %></p>
+        <p class="italic uppercase mt-6 text-sm mb-2">ONLY FOR SPECIALIZED BOARDING SCHOOLS</p>
         <div class="grid grid-cols-2 gap-4 items-center">
-            <div><%= it.t60 %>. <%= it.t61 %></div>
+            <div>I13a. How many students were enrolled in the boarding school as of December 31, the reporting year?</div>
             <div class="flex items-center gap-4">
                 <input type="text" id="i13a" name="i13a" class="bg-white border border-gray-400 text-gray-900 text-sm rounded focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 disabled:bg-gray-100" />
-                <span><%= it.t62 %></span>
+                <span>students</span>
             </div>
         </div>
-        <p class="mt-4"><%= it.t63 %></p>
+        <p class="mt-4">Of whom, </p>
         <div class="ml-4">
             <div class="grid grid-cols-2 gap-4 items-center mt-6">
-                <div><%= it.t64 %>. <%= it.t65 %></div>
+                <div>I13b. How many students do not reside in the boarding facilities and instead commute daily?</div>
                 <div class="flex items-center gap-4">
                     <input type="text" id="i13b" name="i13b" class="bg-white border border-gray-400 text-gray-900 text-sm rounded focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 disabled:bg-gray-100" />
-                    <span><%= it.t66 %></span>
+                    <span>children</span>
                 </div>
             </div>
             <div class="grid grid-cols-2 gap-4 items-center mt-6">
-                <div><%= it.t67 %>. <%= it.t68 %></div>
+                <div>I13c. How many students use the boarding facilities during the week but return home on weekends?</div>
                 <div class="flex items-center gap-4">
                     <input type="text" id="i13c" name="i13c" class="bg-white border border-gray-400 text-gray-900 text-sm rounded focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 disabled:bg-gray-100" />
-                    <span><%= it.t69 %></span>
+                    <span>children</span>
                 </div>
             </div>
             <div class="grid grid-cols-2 gap-4 items-center mt-6">
-                <div><%= it.t70 %>. <%= it.t71 %></div>
+                <div>I13d. How many students stay at the boarding school all week but return home only during vacations?</div>
                 <div class="flex items-center gap-4">
                     <input type="text" id="i13d" name="i13d" class="bg-white border border-gray-400 text-gray-900 text-sm rounded focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 disabled:bg-gray-100" />
-                    <span><%= it.t72 %></span>
+                    <span>children</span>
                 </div>
             </div>
             <div class="grid grid-cols-2 gap-4 items-center mt-6">
-                <div><%= it.t73 %>. <%= it.t74 %></div>
+                <div>I13e. How many students remain at the boarding school continuously, including during vacations and holidays?</div>
                 <div class="flex items-center gap-4">
                     <input type="text" id="i13e" name="i13e" class="bg-white border border-gray-400 text-gray-900 text-sm rounded focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 disabled:bg-gray-100" />
-                    <span><%= it.t75 %></span>
+                    <span>children</span>
                 </div>
             </div>
             <div class="grid grid-cols-2 gap-4 items-center mt-6">
-                <div><%= it.t76 %>. <%= it.t77 %></div>
+                <div>I13f. How many students receive their education through homeschooling provided by the boarding school staff?</div>
                 <div class="flex items-center gap-4">
                     <input type="text" id="i13f" name="i13f" class="bg-white border border-gray-400 text-gray-900 text-sm rounded focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 disabled:bg-gray-100" />
-                    <span><%= it.t78 %></span>
+                    <span>children</span>
                 </div>
             </div>
             <div class="grid grid-cols-2 gap-4 items-center mt-6">
-                <div><%= it.t79 %>. <%= it.t80 %></div>
+                <div>I13g. How many children are deprived of parental care, regardless of the reason (whether they are orphans, abandoned, or their parents have been deprived of parental rights)</div>
                 <div class="flex items-center gap-4">
                     <input type="text" id="i13g" name="i13g" class="bg-white border border-gray-400 text-gray-900 text-sm rounded focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 disabled:bg-gray-100" />
-                    <span><%= it.t81 %></span>
+                    <span>children</span>
                 </div>
             </div>
         </div>
