--- a/src/templates/4_UZ_ChildDI_Material_Resources_ru.html
+++ b/src/templates/4_UZ_ChildDI_Material_Resources_ru.html
@@ -15,91 +15,91 @@
         <div class="grid grid-cols-12 border">
             <div class="col-span-1 bg-stone-200 p-2"></div>
             <div class="col-span-11 p-2">
-                <h1 class="text-4xl text-gray-700 pl-4 tracking-wide mb-4"><%= it.t1 %></h1>
-                <p class="pl-4 text-red-800 text-sm font-medium"><%= it.t2 %></p>
+                <h1 class="text-4xl text-gray-700 pl-4 tracking-wide mb-4">Материальная база учреждения и условия проживания проживания детей в них</h1>
+                <p class="pl-4 text-red-800 text-sm font-medium">Анкета для детских учреждений и специализированных школ-интернатов</p>
             </div>
         </div>
 
-        <p class="mt-4 mb-2 text-xl"><%= it.t3 %></p>
-        <p class="mb-2"><%= it.t4 %></p>
-        <p class="mb-2"><%= it.t5 %></p>
-        <p class="mb-2"><%= it.t6 %></p>
-        <p class="mb-2"><%= it.t7 %></p>
-        <p class="mb-2"><%= it.t8 %></p>
-        <p class="mb-2"><%= it.t9 %></p>
-        <p class="mb-2"><%= it.t10 %></p>
-        <p class="mb-2"><%= it.t11 %></p>
+        <p class="mt-4 mb-2 text-xl">ВВЕДЕНИЕ</p>
+        <p class="mb-2">Основной целью данного сбора данных является оказание поддержки Правительству Узбекистана в переходе от интернатной опеки к семейным видам опеки над детьми, лишенных родительской опеки. Для достижения этой цели мы намерены создать надежный механизм мониторинга на национальном уровне. Собирая подробные данные, мы можем принимать обоснованные решения и разрабатывать политику, способствующие распространению альтернативных семейных форм опеки.</p>
+        <p class="mb-2">Еще одной важнейшей задачей является повышение качества услуг, предоставляемых детям с инвалидностью в специализированных учреждениях. Понимая их уникальные потребности и опыт, мы можем разработать целенаправленные виды вмешательства и улучшить их общее самочувствие. Кроме того, мы стремимся использовать и продвигать адекватные альтернативы семейного типа опеки для этих детей.</p>
+        <p class="mb-2">Сбор данных о материальных и финансовых ресурсах направлен на оценку материально-технической базы, ресурсов и финансовых аспектов детских учреждений и школ-интернатов с целью повышения общего качества услуг по уходу за детьми. Конечная цель состоит в том, чтобы создать безопасную, благоприятную среду, способствующую благополучию и развитию каждого ребенка, помещенного под опеку, руководствуясь фактическими данными.</p>
+        <p class="mb-2">ЦЕЛЬ: Данные, собранные с помощью этого инструмента, способствуют оценке детских учреждений и специализированных школ-интернатов с точки зрения имеющихся у них материальных ресурсов и условий проживания, которые они обеспечивают лицам, проживающим в этих учреждениях.</p>
+        <p class="mb-2">Как заполнять: Этот вопросник необходимо заполнять индивидуально для каждого учреждения, действовавшего на момент проведения исследования (1 января 2024 г.).</p>
+        <p class="mb-2">Источник информации: документы учреждения</p>
+        <p class="mb-2">Ответственный за выполнение: руководитель учреждения, координатор или уполномоченное ими лицо</p>
+        <p class="mb-2">Примерное среднее время выполнения: 90 минут</p>
 
         <div class="grid grid-cols-2 gap-4 items-center mt-12">
-            <div><%= it.t12 %>. <%= it.t13 %></div>
+            <div>Q1. Дата заполнения анкеты</div>
             <div>
                 <input type="text" id="q1" name="q1" class="bg-white border border-gray-400 text-gray-900 text-sm rounded focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 disabled:bg-gray-100" />
             </div>
         </div>
         <div class="grid grid-cols-2 gap-4 items-center mt-6">
-            <div><%= it.t14 %>. <%= it.t15 %></div>
+            <div>Q2. Имя, отчество и фамилия лица, заполнившего анкету</div>
             <div>
                 <input type="text" id="q2" name="q2" class="bg-white border border-gray-400 text-gray-900 text-sm rounded focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 disabled:bg-gray-100" />
             </div>
         </div>
         <div class="grid grid-cols-2 gap-4 items-center mt-6">
-            <div><%= it.t16 %>. <%= it.t17 %></div>
+            <div>Q3. Должность</div>
             <div>
                 <input type="text" id="q3" name="q3" class="bg-white border border-gray-400 text-gray-900 text-sm rounded focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 disabled:bg-gray-100" />
             </div>
         </div>
         <div class="grid grid-cols-2 gap-4 items-center mt-6">
-            <div><%= it.t18 %>. <%= it.t19 %></div>
+            <div>Q4. Профессия</div>
             <div>
                 <input type="text" id="q4" name="q4" class="bg-white border border-gray-400 text-gray-900 text-sm rounded focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 disabled:bg-gray-100" />
             </div>
         </div>
         <div class="grid grid-cols-2 gap-4 items-center mt-6">
-            <div><%= it.t20 %>. <%= it.t21 %></div>
+            <div>Q5. Телефон</div>
             <div>
                 <input type="text" id="q5" name="q5" class="bg-white border border-gray-400 text-gray-900 text-sm rounded focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 disabled:bg-gray-100" />
             </div>
         </div>
         <div class="grid grid-cols-2 gap-4 items-center mt-6">
-            <div><%= it.t22 %>. <%= it.t23 %></div>
+            <div>Q6. Электронная почта</div>
             <div>
                 <input type="text" id="q6" name="q6" class="bg-white border border-gray-400 text-gray-900 text-sm rounded focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 disabled:bg-gray-100" />
             </div>
         </div>
 
-        <h2 class="mt-10 mb-4 text-2xl font-bold text-gray-700"><%= it.t24 %></h2>
+        <h2 class="mt-10 mb-4 text-2xl font-bold text-gray-700">1. ОБЩАЯ ИНФОРМАЦИЯ ОБ УЧРЕЖДЕНИИ</h2>
         <div class="grid grid-cols-2 gap-4 items-center mt-6">
-            <div><%= it.t25 %>. <%= it.t26 %></div>
+            <div>I1. Название специализированного учебного заведения</div>
             <div>
                 <input type="text" id="i1" name="i1" class="bg-white border border-gray-400 text-gray-900 text-sm rounded focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 disabled:bg-gray-100" />
             </div>
         </div>
         <div class="grid grid-cols-2 gap-4 items-center mt-6">
-            <div><%= it.t27 %>. <%= it.t28 %></div>
+            <div>I2. Код учреждения из реестра</div>
             <div>
                 <input type="text" id="i2" name="i2" class="bg-white border border-gray-400 text-gray-900 text-sm rounded focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 disabled:bg-gray-100" />
             </div>
         </div>
         <div class="grid grid-cols-2 gap-4 items-center mt-6">
-            <div><%= it.t29 %>. <%= it.t30 %></div>
+            <div>I3. Адрес учреждения</div>
             <div>
                 <input type="text" id="i3" name="i3" class="bg-white border border-gray-400 text-gray-900 text-sm rounded focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 disabled:bg-gray-100" />
             </div>
         </div>
         <div class="grid grid-cols-2 gap-4 items-center mt-6">
-            <div><%= it.t31 %>. <%= it.t32 %></div>
+            <div>I4. Код административно-территориальной единицы (МҲОБТ)</div>
             <div>
                 <input type="text" id="i4" name="i4" class="bg-white border border-gray-400 text-gray-900 text-sm rounded focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 disabled:bg-gray-100" />
             </div>
         </div>
         <div class="grid grid-cols-2 gap-4 items-center mt-6">
-            <div><%= it.t33 %>. <%= it.t34 %></div>
+            <div>I4a. Область</div>
             <div>
                 <input type="text" id="i4a" name="i4a" class="bg-white border border-gray-400 text-gray-900 text-sm rounded focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 disabled:bg-gray-100" />
             </div>
         </div>
         <div class="grid grid-cols-2 gap-4 items-center mt-6">
-            <div><%= it.t36 %>. <%= it.t37 %></div>
+            <div>I4b. Район</div>
             <div>
                 <input type="text" id="i4b" name="i4b" class="bg-white border border-gray-400 text-gray-900 text-sm rounded focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 disabled:bg-gray-100" />
             </div>
@@ -117,75 +117,75 @@
             </div>
         </div>
         <div class="grid grid-cols-2 gap-4 items-center mt-6">
-            <div><%= it.t39 %>. <%= it.t40 %></div>
+            <div>I9. Тип учреждения</div>
             <div>
                 <input type="text" id="i9" name="i9" class="bg-white border border-gray-400 text-gray-900 text-sm rounded focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 disabled:bg-gray-100" />
             </div>
         </div>
         <div class="grid grid-cols-2 gap-4 items-center mt-6">
-            <div><%= it.t53 %>. <%= it.t54 %></div>
+            <div>I10. Когда заведение начало работать? Пожалуйста, укажите год его создания, независимо от каких-либо изменений в его названии или типе.</div>
             <div>
                 <input type="text" id="i10" name="i10" class="bg-white border border-gray-400 text-gray-900 text-sm rounded focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 disabled:bg-gray-100" />
             </div>
         </div>
-        <p class="italic uppercase mt-6 text-sm mb-2"><%= it.t55 %></p>
+        <p class="italic uppercase mt-6 text-sm mb-2">ТОЛЬКО ДЛЯ ДЕТСКИХ УЧРЕЖДЕНИЙ</p>
         <div class="grid grid-cols-2 gap-4 items-center">
-            <div><%= it.t56 %>. <%= it.t57 %></div>
+            <div>I12a. Сколько детей проживало в учреждении по состоянию на 31 декабря отчетного года?</div>
             <div class="flex items-center gap-4">
                 <input type="text" id="i12a" name="i12a" class="bg-white border border-gray-400 text-gray-900 text-sm rounded focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 disabled:bg-gray-100" />
-                <span><%= it.t58 %></span>
+                <span>дети</span>
             </div>
         </div>
-        <p class="italic uppercase mt-6 text-sm mb-2"><%= it.t59 %></p>
+        <p class="italic uppercase mt-6 text-sm mb-2">ТОЛЬКО ДЛЯ СПЕЦИАЛИЗИРОВАННЫХ ШКОЛ-ИНТЕРНАТОВ</p>
         <div class="grid grid-cols-2 gap-4 items-center">
-            <div><%= it.t60 %>. <%= it.t61 %></div>
+            <div>I13a. Сколько учеников было зачислено в школу-интернат по состоянию на 31 декабря отчетного года?</div>
             <div class="flex items-center gap-4">
                 <input type="text" id="i13a" name="i13a" class="bg-white border border-gray-400 text-gray-900 text-sm rounded focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 disabled:bg-gray-100" />
-                <span><%= it.t62 %></span>
+                <span>учащиеся</span>
             </div>
         </div>
-        <p class="mt-4"><%= it.t63 %></p>
+        <p class="mt-4">Из которых,</p>
         <div class="ml-4">
             <div class="grid grid-cols-2 gap-4 items-center mt-6">
-                <div><%= it.t64 %>. <%= it.t65 %></div>
+                <div>I13b. Сколько детей не проживают в школе-интернате, а  приезжают каждый день?</div>
                 <div class="flex items-center gap-4">
                     <input type="text" id="i13b" name="i13b" class="bg-white border border-gray-400 text-gray-900 text-sm rounded focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 disabled:bg-gray-100" />
-                    <span><%= it.t66 %></span>
+                    <span>дети</span>
                 </div>
             </div>
             <div class="grid grid-cols-2 gap-4 items-center mt-6">
-                <div><%= it.t67 %>. <%= it.t68 %></div>
+                <div>I13c. Сколько детей остаются в школе-интернате в течение недели, но уезжают домой на выходные?</div>
                 <div class="flex items-center gap-4">
                     <input type="text" id="i13c" name="i13c" class="bg-white border border-gray-400 text-gray-900 text-sm rounded focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 disabled:bg-gray-100" />
-                    <span><%= it.t69 %></span>
+                    <span>дети</span>
                 </div>
             </div>
             <div class="grid grid-cols-2 gap-4 items-center mt-6">
-                <div><%= it.t70 %>. <%= it.t71 %></div>
+                <div>I13d. Сколько детей остаются в школе -интернате в течение недели, но уезжают домой только во время каникул?</div>
                 <div class="flex items-center gap-4">
                     <input type="text" id="i13d" name="i13d" class="bg-white border border-gray-400 text-gray-900 text-sm rounded focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 disabled:bg-gray-100" />
-                    <span><%= it.t72 %></span>
+                    <span>дети</span>
                 </div>
             </div>
             <div class="grid grid-cols-2 gap-4 items-center mt-6">
-                <div><%= it.t73 %>. <%= it.t74 %></div>
+                <div>I13e. Сколько детей постоянно проживают в школе-интернате, включая выходные и каникулы?</div>
                 <div class="flex items-center gap-4">
                     <input type="text" id="i13e" name="i13e" class="bg-white border border-gray-400 text-gray-900 text-sm rounded focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 disabled:bg-gray-100" />
-                    <span><%= it.t75 %></span>
+                    <span>дети</span>
                 </div>
             </div>
             <div class="grid grid-cols-2 gap-4 items-center mt-6">
-                <div><%= it.t76 %>. <%= it.t77 %></div>
+                <div>I13f. Сколько детей находятся на надомном обучении, предоставляемой персоналом школы-интерната?</div>
                 <div class="flex items-center gap-4">
                     <input type="text" id="i13f" name="i13f" class="bg-white border border-gray-400 text-gray-900 text-sm rounded focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 disabled:bg-gray-100" />
-                    <span><%= it.t78 %></span>
+                    <span>дети</span>
                 </div>
             </div>
             <div class="grid grid-cols-2 gap-4 items-center mt-6">
-                <div><%= it.t79 %>. <%= it.t80 %></div>
+                <div>I13g. Сколько детей лишены родительской опеки, невзирая на причины (дети-сироты, брошенные дети, дети, чьи родители были лишены родительских прав)?</div>
                 <div class="flex items-center gap-4">
                     <input type="text" id="i13g" name="i13g" class="bg-white border border-gray-400 text-gray-900 text-sm rounded focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 disabled:bg-gray-100" />
-                    <span><%= it.t81 %></span>
+                    <span>дети</span>
                 </div>
             </div>
         </div>
